--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data/twly_crawler"]
 	path = data/twly_crawler
-	url = https://github.com/g0v/twly_crawler.git
+	url = git@github.com:g0v/twly_crawler.git
